--- a/Face Capture Demo/Podfile
+++ b/Face Capture Demo/Podfile
@@ -1,5 +1,5 @@
-source 'file:///Users/jakub/Applied-Recognition/CocoaPods-repo'
-source 'https://cdn.cocoapods.org/'
+source 'https://github.com/AppliedRecognition/Ver-ID-CocoaPods-Repo.git'
+source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '13.0'
 
@@ -8,8 +8,8 @@ target 'Face Capture Demo' do
 
   # Pods for Face Capture Demo
   pod 'FaceCapture', :path => '../'
-  pod 'VerIDCommonTypes', :git => 'https://github.com/AppliedRecognition/Ver-ID-Common-Types-Apple.git', :commit => '0debdd8d6f1c04b6b7dfd4161f27911c06b2e174'
+  pod 'VerIDCommonTypes', '~> 1.0.0'
   pod 'SpoofDeviceDetection/Model', '~> 1.0'
-  pod 'Ver-ID-3-Serialization', :git => 'https://github.com/AppliedRecognition/Ver-ID-3-Serialization-Apple.git', :commit => 'ea6dfb1ecdb05546233d7cc34d62d3cc64d5bd9f'
-  pod 'FaceDetectionMediaPipe', :git => 'https://github.com/AppliedRecognition/Face-Detection-MediaPipe-Apple.git', :commit => 'd9d56322269dee1b1f6e210693fbcbe855674f37'
+  pod 'Ver-ID-3-Serialization', '~> 1.0.0'
+  pod 'FaceDetectionMediaPipe', '~> 1.0.0'
 end
